--- a/index.html
+++ b/index.html
@@ -4,32 +4,350 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Experience Bulacan</title>
-    <link rel="shortcut icon" href="img/icomn.png" type="image/x-icon">
+    <title>Experience Bulacan | Home</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+
 </head>
 
 <body>
-
-    <div class="header">
-        <div class="topnav">
+    <div class="scroll-up-btn">
+        <i class="fas fa-angle-up"></i>
+    </div>
+    <nav class="navbar">
+        <div class="max-width">
             <div class="logo">
-                <img src="img/icomn.png" height="100" alt="">
-                <h1>Experience Bulacan</h1>
-            </div>
-            <div class="navlist">
-                <label>&#9776;</label>
+                <a href="">Experience <span>Bulacan</span></a></div>
+            <ul class="menu">
+                <li><a href="#" class="menu-btn">Home</a></li>
+                <li><a href="#about" class="menu-btn">About</a></li>
+                <li><a href="#services" class="menu-btn">Tips</a></li>
+                <li><a href="#contact" class="menu-btn">Contact</a></li>
+            </ul>
+            <div class="menu-btn">
+                <i class="fas fa-bars"></i>
             </div>
         </div>
+    </nav>
 
-        <div class="container">
-            <img src="img/logo.png" height="550" alt="">
-            <br>
-            <a href="places.html" target="_blank">Explore</a>
-            <a href="#">Travel Tips</a>
-        </div>
+    <!-- home section start -->
+    <div class="video">
+        <video src="./img/videoplay1.mp4" autoplay muted loop>
+        </video>
+        <section class="home" id="home">
+            <div class="max-width">
+                <div class="home-content">
+                    <div class="text-1">
+                        Welcome to,</div>
+                    <div class="text-2">
+                        BULACAN</div>
+                    <div class="text-3">
+                        Expect . Explore . Enjoy <span class="typing"></span></div>
+                    <a href="places.html">Explore</a>
+                </div>
+            </div>
+        </section>
     </div>
 
+
+    <!-- about section start -->
+    <section class="about" id="about">
+        <div class="max-width">
+            <h2 class="title">
+                About us</h2>
+            <div class="about-content">
+                <div class="column left">
+                    <img src="" alt="">
+                </div>
+                <div class="column right">
+                    <div class="text">
+                        We are students of BTECH and <span class="typing-2"></span></div>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione mollitia expedita earum ex numquam maxime ipsa sint, libero quaerat magnam quam neque esse ducimus, minus alias. Fuga quo minima adipisci eum accusamus officiis labore similique, facilis
+                        deserunt inventore sint repellendus delectus placeat minus dolorum magnam nam cum laudantium, ullam molestias!
+                    </p>
+                    <a href="places.html">Explore</a>
+                    <a href="#contact">Reach us</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- services section start -->
+    <section class="services" id="services">
+        <div class="max-width">
+            <h2 class="title">
+                Our services</h2>
+            <div class="serv-content">
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-paint-brush"></i>
+                        <div class="text">
+                            Title1</div>
+                        <p>
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel porro, delectus expedita facere dicta perspiciatis dolores mollitia cumque excepturi! Iste.
+                        </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-chart-line"></i>
+                        <div class="text">
+                            Title2</div>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis natus facilis tempora minima amet corrupti mollitia, quaerat ipsum odio totam.
+                        </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-code"></i>
+                        <div class="text">
+                            Title3</div>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam quo veritatis consequatur nemo alias eaque perspiciatis voluptatum. Quisquam, repudiandae? Ipsum.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+    </section>
+
+    <!-- skills section start -->
+    <section class="skills" id="skills">
+        <div class="max-width">
+            <h2 class="title">
+                Travel Tips</h2>
+            <div class="skills-content">
+                <div class="column left">
+                    <div class="text">
+                        Our tips and guidelines</div>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim accusantium explicabo dolor saepe rerum nisi optio ipsa quos voluptates ex.
+                    </p>
+                    <a href="#">Read more</a>
+                </div>
+                <div class="column right">
+                    <!-- <div class="bars">
+                        <div class="info">
+                            <span></span>
+                            <span></span>
+                        </div>
+                        <div class="line html">
+                        </div>
+                    </div> -->
+                    <!-- <div class="bars">
+                        <div class="info">
+                            <span></span>
+                            <span></span>
+                        </div>
+                        <div class="line css">
+                        </div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span></span>
+                            <span></span>
+                        </div>
+                        <div class="line js">
+                        </div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span></span>
+                            <span></span>
+                        </div>
+                        <div class="line php">
+                        </div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span></span>
+                            <span></span>
+                        </div>
+                        <div class="line mysql">
+                        </div>
+                    </div> -->
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- teams section start -->
+    <section class="teams" id="teams">
+        <div class="max-width">
+            <h2 class="title">
+                My teams</h2>
+            <div class="carousel owl-carousel">
+                <div class="card">
+                    <div class="box">
+                        <img src="#" alt="">
+                        <div class="text">
+                            Richard Gonzales</div>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="#" alt="">
+                        <div class="text">
+                            Mikko John Falcon</div>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="#" alt="">
+                        <div class="text">
+                            Empty Slot 3</div>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="#" alt="">
+                        <div class="text">
+                            Empty Slot 4</div>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="#" alt="">
+                        <div class="text">
+                            Empty Slot 5</div>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- contact section start -->
+    <section class="contact" id="contact">
+        <div class="max-width">
+            <h2 class="title">
+                Contact me</h2>
+            <div class="contact-content">
+                <div class="column left">
+                    <div class="text">
+                        Get in Touch</div>
+                    <p>
+                        If you like our services and offers, please get in touch.
+                    </p>
+                    <div class="icons">
+                        <div class="row">
+                            <i class="fas fa-user"></i>
+                            <div class="info">
+                                <div class="head">
+                                    Name</div>
+                                <div class="sub-title">
+                                    Experience Bulacan</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <div class="info">
+                                <div class="head">
+                                    Address</div>
+                                <div class="sub-title">
+                                    Bulacan, Philippines</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <i class="fas fa-envelope"></i>
+                            <div class="info">
+                                <div class="head">
+                                    Email</div>
+                                <div class="sub-title">
+                                    experiencebulacan@email.com</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="column right">
+                    <div class="text">
+                        Contact Us</div>
+                    <form action="#">
+                        <div class="fields">
+                            <div class="field name">
+                                <input type="text" placeholder="Name" required>
+                            </div>
+                            <div class="field email">
+                                <input type="email" placeholder="Email" required>
+                            </div>
+                        </div>
+                        <div class="field">
+                            <input type="text" placeholder="Subject" required>
+                        </div>
+                        <div class="field textarea">
+                            <changeit cols="30" rows="10" placeholder="Message.." required></changeit>
+                        </div>
+                        <div class="button">
+                            <button type="submit">Send message</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- footer section start -->
+    <footer>
+        <span><a href="">Experience Bulacan</a> | <span class="far fa-copyright"></span> 2020 All rights reserved.
+        </span>
+    </footer>
+
+    <script>
+        $(document).ready(function() {
+            $(window).scroll(function() {
+
+                // STICKY NAVBAR
+                if (this.scrollY > 20) {
+                    $('.navbar').addClass("sticky");
+                } else {
+                    $('.navbar').removeClass("sticky");
+                }
+
+                // SHOW/HIDE SCRIPT
+                if (this.scrollY > 500) {
+                    $('.scroll-up-btn').addClass("show");
+                } else {
+                    $('.scroll-up-btn').removeClass("show");
+                }
+            });
+
+            // GO TO TOP BUTTON
+            $('.scroll-up-btn').click(function() {
+                $('html').animate({
+                    scrollTop: 0
+                });
+                $('html').css("scrollBehavior", "auto");
+            });
+
+            $('.navbar .menu li a').click(function() {
+                // GO TO SPECIFIC NAVBAR ITEM
+                $('html').css("scrollBehavior", "smooth");
+            });
+
+            // MENU ICON
+            $('.menu-btn').click(function() {
+                $('.navbar .menu').toggleClass("active");
+                $('.menu-btn i').toggleClass("active");
+            });
+        });
+    </script>
 </body>
 
 </html>
