potang ina kasi

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Experience Bulacan | Home</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/icomn.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
@@ -48,7 +48,7 @@
                         BULACAN</div>
                     <div class="text-3">
                         Expect . Explore . Enjoy <span class="typing"></span></div>
-                    <a href="places.html">Explore</a>
+                    <a class="text-4" href="places.html">Explore</a>
                 </div>
             </div>
         </section>
@@ -238,7 +238,7 @@
     <section class="contact" id="contact">
         <div class="max-width">
             <h2 class="title">
-                Contact me</h2>
+                Contact Us</h2>
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">
