--- a/cities.html
+++ b/cities.html
@@ -33,10 +33,10 @@
             </div>
             <div class="navlist">
                 <ul class="menu">
-                    <li><a href="#">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a class="active" href="#">Cities</a></li>
                     <li><a href="#">Travel Tips</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="index.html#contact">Contact</a></li>
                 </ul>
                 <div class="menu-btn">
                     <i class="fas fa-bars"></i>
