--- a/cities/dona-remedios-trinidad/drt.html
+++ b/cities/dona-remedios-trinidad/drt.html
@@ -37,7 +37,7 @@
                     <li><a href="../../index.html">Home</a></li>
                     <li><a class="active" href="../../cities.html">Cities</a></li>
                     <li><a href="#">Travel Tips</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="../../index.html#contact">Contact</a></li>
                 </ul>
                 <div class="menu-btn">
                     <i class="fas fa-bars"></i>
